[package]
name = "autoDoc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }  # Pour le CLI
serde = { version = "1.0", features = ["derive"] } # Pour la config
serde_json = "1.0"                                 # Pour parser les annotations
toml = "0.7"                                       # Pour le fichier de config
regex = "1.0"                                      # Pour extraire les commentaires
walkdir = "2.0"                                    # Pour parcourir les fichiers
